--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  flex-direction: row;
 }
 
 .flex-container > img {
@@ -16,4 +17,15 @@ body {
 img {
   width: 250px;
   height: 200px;
+}
+
+@media (max-width: 640px) {
+}
+@media (max-width: 768px) {
+}
+@media (max-width: 1024px) {
+}
+@media (max-width: 1280px) {
+}
+@media (max-width: 1536px) {
 }
