--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,60 @@
-body {
-  background-color: rgba(28, 84, 227, 0.72);
-  font-family: Arial, Helvetica, sans-serif;
+@media (min-width: 320px) {
+  body {
+    background-color: rgba(28, 84, 227, 0.72);
+    font-family: Arial, Helvetica, sans-serif;
+  }
+
+  .flex-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  .flex-container > img {
+    margin: 30px;
+  }
+  h1 {
+    font-size: 46px;
+  }
+  img {
+    width: 500px;
+    height: 300px;
+  }
 }
 
-.flex-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  flex-direction: row;
+@media (min-width: 981px) {
+  .flex-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    flex-direction: row;
+  }
+
+  .flex-container > img {
+    margin: 30px;
+  }
+
+  img {
+    width: 250px;
+    height: 200px;
+  }
 }
 
-.flex-container > img {
-  margin: 30px;
-}
+@media (min-width: 1200px) {
+  .flex-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    flex-direction: row;
+  }
 
-img {
-  width: 250px;
-  height: 200px;
-}
+  .flex-container > img {
+    margin: 30px;
+  }
 
-@media (max-width: 640px) {
-}
-@media (max-width: 768px) {
-}
-@media (max-width: 1024px) {
-}
-@media (max-width: 1280px) {
-}
-@media (max-width: 1536px) {
+  img {
+    width: 250px;
+    height: 200px;
+  }
 }
